# Unit-test-hashing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  tests.cpp  tests.h
src/Algo/sha3/: sha3.cpp
